---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ???
  Features:
    - Added setting to disable automatically disconnect poles of different types when placed
  Changes:
    - Changed transformer buffer resizing to more closely follow demand/supply
  Bugfixes:
    - Fixed poles not exploding until after saving and loading the first time
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 18 May 2022
  Bugfixes:
    - Fixed crash when a surface is deleted
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 4 May 2022
  Bugfixes:
    - Fixed transformers being lost when mined instead of returned to inventory
    - Fixed transformers not working with pipette tool 'Q'
  Locale:
    - Added complete Brazilian Portuguese translations (thanks Bruno Melo on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 21 March 2021
  Changes:
    - Increased default maximum consumptions when playing with Krastorio2 (you have to reset mod settings to default each time you load with/without K2)
  Bugfixes:
    - Fixed poles exploding when a pole on their network is placed next to a high-power network
    - Fixed crash when placing transformer on a newly added or renamed surface
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 18 February 2021
  Bugfixes:
    - Fixed crash when starting new game
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 17 February 2021
  Bugfixes:
    - Fixed incompatibility with Mining Drones
    - Fixed some poles never being checked for overload
    - Fixed crash in Factorio 1.1.25