@@ -3,6 +3,7 @@ Version: 1.2.0
 Date: ???
   Features:
     - Added setting to disable automatically disconnect poles of different types when placed
+    - Increased performance of electric poles by 400%
   Changes:
     - Changed transformer buffer resizing to more closely follow demand/supply
   Bugfixes:
